2008-06-18  Frederic Crozat  <fcrozat@mandriva.com>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.23.4

2008-06-04  Vincent Untz  <vuntz@gnome.org>

	* versions: update for vte and gnome-terminal

2008-06-04  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.23.3

2008-05-14  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball.jhbuildrc:
	* versions: update for 2.23.2

2008-04-23  Vincent Untz  <vuntz@gnome.org>

	* versions: fix perl bindings versions

2008-04-23  Vincent Untz  <vuntz@gnome.org>

	* versions: revert gtkmm to 2.12.7 for now. See bug #529496.

2008-04-23  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/convert-to-tarballs.py: do not "crash" in
	_get_files_from_file if we try to list the tarballs for a module that
	never had any release so far. Just ignore it (and warn about it).

2008-04-23  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: add seahorse-plugins (which
	was split from seahorse)

2008-04-23  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball.jhbuildrc:
	* smoketesting/tarball-conversion.config:
	* versions: updated for 2.23.1

2008-04-09  Vincent Untz  <vuntz@gnome.org>

	* versions: revert
	* versions-stable: and commit to the right file :-)

2008-04-09  Vincent Untz  <vuntz@gnome.org>

	* versions: fix perl versions

2008-04-09  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/sample-tarball-stable.jhbuildrc:
	* versions-stable: updated for 2.22.1

2008-04-04  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/automail.py: Parse 2.24 schedule file.
	* schedule/wiki.py: Parse 2.24 schedule file.

2008-03-24  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: don't limit gtk+ to 2.13.
	Remove gail, since it has been integrated in gtk+.

2008-03-18  Vincent Untz  <vuntz@gnome.org>

	* smoketesting/tarball-conversion.config: add a local mirror here too
